<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.matsubara</groupId>
    <artifactId>realisticvillagers-parent</artifactId>
    <version>3.3.6.8</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>16</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <name>RealisticVillagers</name>
    <description>Forget about those boring villagers and replace them with interactive humans!</description>

    <modules>
        <module>Config-Updater-2.2-SNAPSHOT</module>
        <module>v1_19</module>
        <module>v1_20_6</module>
        <module>v1_21_8</module>
        <module>v1_21_10</module>
        <module>v1_21_11</module>
        <module>v26_1</module>
        <module>core</module>
        <module>dist</module>
    </modules>

    <dependencies>
        <!-- Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.46</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>
